--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <input type="text">
     <div>
         <button>Google Search</button>
-        <button>I'm Feeling Lucky</button>
+        <button>I am Feeling Lucky</button>
     </div>
  
 </body>
