--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-    <img src="Google.webp" alt="Google Logo">
+    <img src="Google.png" alt="Google Logo">
     <input type="text">
     <div>
         <button>Google Search</button>
