--- a/index.html
+++ b/index.html
@@ -3,17 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Webpage</title>
-    <link rel="stylesheet" href="Style.css">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
     <img src="Google.png" alt="Google Logo">
     <input type="text">
     <div>
         <button>Google Search</button>
         <button>I am Feeling Lucky</button>
     </div>
- 
 </body>
 </html>
